# fast-cov

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release-notes.md  renovate.json
.github/workflows/: coverage-upload.yml  pre-commit.yml  publish.yml  test-backend.yml
backend/: constants.py  main.py  pyproject.toml  schemas.py
backend/app/: config.py  main.py
backend/app/dependencies/: auth.py  aws_storage.py  gh_client.py
backend/app/routers/: badge.py  coverage.py
backend/app/utils/: github_client.py
backend/dependencies/: auth.py  aws_storage.py  gh_client.py  redis_client.py
backend/routers/: badge.py  coverage.py
backend/tests/: conftest.py  test_badge.py  test_create_site.py  test_get_file.py  test_invalidate_cache.py
backend/tests/test_utils/: test_aws_storage.py  test_github_client.py
backend/utils/: aws_storage.py  github_client.py
cli/: README.md  pyproject.toml
cli/src/: LICENSE
cli/src/covered/: cli.py
cli/src/fast_cov/: cli.py
