[project]
name = "fast-cov"
version = "0.1.0"
description = "Upload coverage reports to fast-cov"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.2.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "stamina>=24.3.0",
    "typer>=0.15.0",
]

[project.scripts]
fast-cov = "fast_cov.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_cov"]
