[project]
name = "covered"
version = "0.1.0"
description = "Upload coverage reports to 'covered'"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yurii Motov" }]
keywords = ["coverage", "ci", "github"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "aiobotocore>=3.2.1",
    "httpx>=0.28.1",
    "stamina>=24.3.0",
    "typer>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/YuriiMotov/covered"
Repository = "https://github.com/YuriiMotov/covered"
Issues = "https://github.com/YuriiMotov/covered/issues"

[project.scripts]
covered = "covered.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
